--- a/css/produtos.css
+++ b/css/produtos.css
@@ -38,10 +38,13 @@ nav a{
 	display: inline-block;
 	text-align: center;
 	width: 30%;
+	height: 100%;
 	vertical-align: top;
 	margin: 0 1.5%;
 	padding: 30px 20px;
 	box-sizing: border-box;
+	border: 2px solid #000000;
+	border-radius: 40px;
 }
 
 .produtos h2{
