--- a/css/style.css
+++ b/css/style.css
@@ -128,11 +128,26 @@ form label, form legend{
 	font-size: 18px;
 	border: none;
 	border-radius: 5px;
-	transition: 1s all;
+	transition: 3s all;
 	cursor: pointer;
 }
 
 .enviar:hover{
 	background: darkorange;
 	transform: rotate(360deg) scale(1.5);
+}
+
+table{
+	margin: 20px 0 40px 0;
+}
+
+thead{
+	background: #555555;
+	color: white;
+	font-weight: bold;
+}
+
+td, th{
+	border: 1px solid #000000;
+	padding: 8px 15px;
 }
