--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+	font-family: 'Montserrat', sans-serif;;
+}
+
 header{
 	background: #BBBBBB;
 	padding: 20px 0;
@@ -160,6 +164,7 @@ td, th{
 	text-align: center;
 	font-size: 2em;
 	margin: 0 0 1em;
+	clear: left;
 }
 
 .principal p{
@@ -174,6 +179,49 @@ td, th{
 	font-style: italic;
 }
 
-.imagem_beneficios{
+.utensilios{
+	width: 150px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.beneficios{
+	padding: 3em 0;
+}
+
+.conteudo-beneficios{
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios{
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens{
+	line-height: 1.5;
+}
+
+.itens:first-child{
+	font-weight: bold;
+}
+
+.imagem-beneficios{
 	width: 60%;
+}
+
+.mapa{
+	padding: 3em 0;
+}
+
+.mapa p{
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.video{
+	width: 560px;
+	margin: 2em auto;
 }
