Melhorias da interface index.html com CSS

--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,7 @@ footer .copyright{
 }
 
 main{
-	width: 940px;
-	margin: 0 auto;
+
 }
 
 form{
@@ -167,6 +166,29 @@ td, th{
 	clear: left;
 }
 
+.titulo-principal:first-letter{
+	font-weight: bold;
+}
+
+.titulo-principal:before{
+	content: "[";
+}
+
+.titulo-principal:after{
+	content: "]";
+}
+
+p:first-line{
+	font-style: italic;
+}
+
+.principal{
+	padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .principal p{
 	margin: 0 0 1em;
 }
@@ -187,6 +209,7 @@ td, th{
 
 .beneficios{
 	padding: 3em 0;
+	background: #888888;
 }
 
 .conteudo-beneficios{
@@ -208,12 +231,22 @@ td, th{
 	font-weight: bold;
 }
 
+.itens:before{
+	content: "★";
+}
+
 .imagem-beneficios{
 	width: 60%;
 }
 
 .mapa{
 	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo{
+	width: 940px;
+	margin: 0 auto;
 }
 
 .mapa p{
